test/error/iface/err3.rzy
component
  Sub
    output
      funcA();
      funcB();
      
  implementation elementary
  end

  Err3
    output
      funcA();

  implementation composition
    
    component
      a : Sub;
      
    connection
      a.funcA -> funcA;

  end

